Launchpad automatic translations update.

--- a/po/stellarium-skycultures/sv.po
+++ b/po/stellarium-skycultures/sv.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-08 19:02+0700\n"
-"PO-Revision-Date: 2013-01-26 13:29+0000\n"
-"Last-Translator: Alexander Wolf <Unknown>\n"
+"PO-Revision-Date: 2013-02-28 10:44+0000\n"
+"Last-Translator: Mikael Hiort af Ornäs <lakritslemmel@hotmail.com>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-01-27 04:35+0000\n"
-"X-Generator: Launchpad (build 16451)\n"
+"X-Launchpad-Export-Date: 2013-03-01 04:42+0000\n"
+"X-Generator: Launchpad (build 16514)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -23,7 +23,7 @@ msgstr "Stjärnhopen 47 Tuc"
 
 #: nebulae/default/ngc2000names.dat:113 nebulae/default/ngc2000names.dat:114
 msgid "Antennae"
-msgstr "Antenn-galaxen"
+msgstr "Antenngalaxen"
 
 #: nebulae/default/ngc2000names.dat:115
 msgid "Barnard's galaxy"
@@ -31,7 +31,7 @@ msgstr "Barnards galax"
 
 #: nebulae/default/ngc2000names.dat:116
 msgid "Bear's Paw galaxy"
-msgstr ""
+msgstr "Björnramsgalaxen"
 
 #: nebulae/default/ngc2000names.dat:117
 msgid "Beehive cluster"
