--- a/po/stellarium/cs.po
+++ b/po/stellarium/cs.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-28 00:00+0700\n"
-"PO-Revision-Date: 2013-02-27 20:56+0000\n"
+"PO-Revision-Date: 2013-02-28 06:07+0000\n"
 "Last-Translator: Zbyněk Schwarz <Unknown>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-02-28 04:37+0000\n"
-"X-Generator: Launchpad (build 16506)\n"
+"X-Launchpad-Export-Date: 2013-03-01 04:41+0000\n"
+"X-Generator: Launchpad (build 16514)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1198
 msgid "Meridian"
@@ -128,7 +128,7 @@ msgstr "Absolutní magnituda: %1"
 #: src/core/modules/Planet.cpp:463
 #, qt-format
 msgid "Ecliptic Topocentric (of date): %1/%2"
-msgstr "Ekliptická topocentrická (k datuú: %1/%2"
+msgstr "Ekliptická topocentrická (k datu: %1/%2"
 
 #: src/core/modules/Planet.cpp:464
 #, qt-format
@@ -383,8 +383,8 @@ msgid ""
 "This formula was obtained by K.M. Borkowski (%1) from an analysis of 31 "
 "solar eclipse records dating between 2137 BCE and 1715 CE."
 msgstr ""
-"Tento vzorec získal K.M. Borkowski (%1) z analýzy 31záznamů zatmění Slunce v "
-"období 2137 př. n. l. a 1715 n. l."
+"Tento vzorec získal K.M. Borkowski (%1) z analýzy 31 záznamů zatmění Slunce "
+"v období 2137 př. n. l. a 1715 n. l."
 
 #: src/core/StelCore.cpp:1464
 #, qt-format
