--- a/po/stellarium-skycultures/stellarium-skycultures.pot
+++ b/po/stellarium-skycultures/stellarium-skycultures.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-01-08 19:02+0700\n"
+"POT-Creation-Date: 2013-03-03 02:26+0700\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -4871,7 +4871,7 @@ msgid "Merga"
 msgstr ""
 
 #: skycultures/western/star_names.fab:142
-msgid "Kocab"
+msgid "Kochab"
 msgstr ""
 
 #: skycultures/western/star_names.fab:143
