--- a/po/stellarium/nb.po
+++ b/po/stellarium/nb.po
@@ -9,13 +9,13 @@ msgstr ""
 "Project-Id-Version: nb\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-03 23:02+0700\n"
-"PO-Revision-Date: 2013-02-01 20:06+0000\n"
+"PO-Revision-Date: 2013-03-04 19:36+0000\n"
 "Last-Translator: FreewareTips <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-03-04 05:19+0000\n"
+"X-Launchpad-Export-Date: 2013-03-05 04:46+0000\n"
 "X-Generator: Launchpad (build 16514)\n"
 "X-Poedit-Country: NORWAY\n"
 "X-Poedit-Language: Norwegian\n"
@@ -111,7 +111,7 @@ msgstr "Planetarisk tåke"
 
 #: src/core/modules/Nebula.cpp:385
 msgid "Dark Nebula"
-msgstr ""
+msgstr "Mørk tåke"
 
 #: src/core/modules/Nebula.cpp:388
 msgid "Cluster associated with nebulosity"
@@ -617,7 +617,7 @@ msgstr "RA/DE (d.d.): %1/%2"
 #: src/core/StelObject.cpp:111
 #, qt-format
 msgid "Galactic longitude/latitude: %1/%2"
-msgstr ""
+msgstr "Galaktisk lengdegrad/breddegrad: %1/%2"
 
 #: src/core/StelObject.cpp:121 src/core/StelObject.cpp:124
 #: src/core/StelObject.cpp:127
@@ -766,7 +766,7 @@ msgstr ""
 #. TRANSLATORS: Full phrase is "Algorithm of DeltaT"
 #: src/gui/ConfigurationDialog.cpp:1120
 msgid "Algorithm of"
-msgstr ""
+msgstr "Algoritme for"
 
 #: src/gui/ConfigurationDialog.cpp:1131
 msgid "Without correction"
@@ -1891,7 +1891,7 @@ msgid ""
 "occultations of both on the same day are very rare. Here's one that takes "
 "place 1/23/2048. In real speed."
 msgstr ""
-"Phobos okkultasjoner av jorden er vanlig, det samme er okkultasjoner av "
+"Phobosokkultasjoner av jorden er vanlig, det samme er okkultasjoner av "
 "Jupiter. Men okkultasjoner av begge på samme dag er svært sjeldne. Her er en "
 "som finner sted 23/1/2048. I virkelig hastighet."
 
@@ -3764,11 +3764,11 @@ msgstr "Meteorer"
 
 #: src/ui_viewDialog.h:1224
 msgid "Hourly zenith rate"
-msgstr ""
+msgstr "Timerate i senit"
 
 #: src/ui_viewDialog.h:1226
 msgid "ZHR:"
-msgstr ""
+msgstr "ZHR:"
 
 #: src/ui_viewDialog.h:1229
 msgid "Limit Magnitudes (for unaided/binocular observers)"
@@ -4075,11 +4075,11 @@ msgstr "Skjuler musepekeren ved inaktivitet"
 
 #: src/ui_configurationDialog.h:1061
 msgid "Mouse cursor timeout:"
-msgstr ""
+msgstr "Tidsavbrudd for musepeker:"
 
 #: src/ui_configurationDialog.h:1063
 msgid "seconds"
-msgstr ""
+msgstr "sekunder"
 
 #: src/ui_configurationDialog.h:1065
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:187
@@ -4120,11 +4120,11 @@ msgstr "Systemdato kl.:"
 
 #: src/ui_configurationDialog.h:1079
 msgid "Time correction"
-msgstr ""
+msgstr "Tidskorrigering"
 
 #: src/ui_configurationDialog.h:1082
 msgid "Edit equation"
-msgstr ""
+msgstr "Rediger formel"
 
 #: src/ui_configurationDialog.h:1084
 msgid "Planetarium options"
