--- a/po/stellarium/ms.po
+++ b/po/stellarium/ms.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-03 23:02+0700\n"
-"PO-Revision-Date: 2013-02-18 13:15+0000\n"
+"PO-Revision-Date: 2013-03-06 03:35+0000\n"
 "Last-Translator: abuyop <Unknown>\n"
 "Language-Team: Malay <ms@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-03-04 05:18+0000\n"
+"X-Launchpad-Export-Date: 2013-03-06 05:13+0000\n"
 "X-Generator: Launchpad (build 16514)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1259
@@ -108,7 +108,7 @@ msgstr "Nebula planetari"
 
 #: src/core/modules/Nebula.cpp:385
 msgid "Dark Nebula"
-msgstr ""
+msgstr "Nebula Gelap"
 
 #: src/core/modules/Nebula.cpp:388
 msgid "Cluster associated with nebulosity"
@@ -387,6 +387,8 @@ msgid ""
 "F. R. Stephenson published this formula in his book <em>Historical Eclipses "
 "and Earth's Rotation</em> (%1)."
 msgstr ""
+"F. R. Stephenson telah menerbitkan formula ini di dalam bukunya "
+"<em>Historical Eclipses and Earth's Rotation</em> (%1)."
 
 #: src/core/StelCore.cpp:1476
 msgid ""
@@ -408,6 +410,8 @@ msgid ""
 "This polynome was published by J. Meeus and L. Simons in article "
 "<em>Polynomial approximations to Delta T, 1620-2000 AD</em> (%1)."
 msgstr ""
+"Polinome ini telah diterbitkan oleh J. Meeus dan L. Simons di dalam sebuah "
+"artikel <em>Polynomial approximations to Delta T, 1620-2000 AD</em> (%1)."
 
 #: src/core/StelCore.cpp:1485
 msgid ""
@@ -440,6 +444,10 @@ msgid ""
 "cosine and square function. This is based on a possible periodicy described "
 "by Stephenson (%2). See for more info %3here%4."
 msgstr ""
+"Dari Panjang Sehari (LOD; yang ditentukan oleh Stephenson & Morrison (%2)), "
+"Victor Reijs menerbitkan formula %1T menggunakan pengoptimuman Simplex "
+"dengan fungsi kosinus dan kuasa dua. Ia berasaskan kemungkinan berkala yang "
+"diterangkan oleh Stephenson (%2). Maklumat lanjut boleh dirujuk %3disini%4."
 
 #: src/core/StelCore.cpp:1497
 #, qt-format
@@ -450,6 +458,12 @@ msgid ""
 "Solar Eclipses: -1900 to +3000</em> (2006). This formula is also used in the "
 "solar, lunar and planetary ephemeris program SOLEX."
 msgstr ""
+"Penyelesaian ini oleh F. Espenak dan J. Meeus, berasakan pada Morrison & "
+"Stephenson (2004) dan kesesuaian polinomial menerusi nilai berjadual bagi "
+"1600-2000, digunakan untuk Laman Sesawang %1NASA Eclipse Site%2 dan dalam "
+"<em>Five Millennium Canon of Solar Eclipses: -1900 to +3000</em> (2006) "
+"mereka. Formula ini juga digunakan untuk program SOLEX efemeris suria, bulan "
+"dan planet."
 
 #: src/core/StelCore.cpp:1497
 msgid "Used by default."
@@ -461,6 +475,8 @@ msgid ""
 "This is a quadratic formula for calculation of %1T with coefficients defined "
 "by the user."
 msgstr ""
+"Ini merupakan formula kuadratik untuk pengiraan %1T dengan pemalar yang "
+"ditakrif oleh pengguna."
 
 #: src/core/StelCore.cpp:1503 src/core/SimbadSearcher.cpp:132
 msgid "Error"
@@ -468,21 +484,23 @@ msgstr "Ralat"
 
 #: src/core/StelCore.cpp:1552
 msgid "with meaningless values outside this range"
-msgstr ""
+msgstr "dengan nilai tanpa makna diluar julat ini"
 
 #: src/core/StelCore.cpp:1578
 msgid ""
 "with a mean error of less than one second, max. error 1.9s, and meaningless "
 "values outside this range"
 msgstr ""
+"dengan ralat min bagi kurang dari satu saat, ralat maksimum 1.9s, dan nilai "
+"tanpa makna diluar julat ini"
 
 #: src/core/StelCore.cpp:1602 src/core/StelCore.cpp:1607
 msgid "with zero values outside this range"
-msgstr ""
+msgstr "dengan nilai sifar diluar julat ini"
 
 #: src/core/StelCore.cpp:1612
 msgid "with a typical 1-second accuracy and zero values outside this range"
-msgstr ""
+msgstr "dengan ketepatan biasa 1-saat dan nilai sifar diluar julat ini"
 
 #: src/core/StelCore.cpp:1639
 #, qt-format
@@ -616,7 +634,7 @@ msgstr "RA/DE (dari tarikh): %1/%2"
 #: src/core/StelObject.cpp:111
 #, qt-format
 msgid "Galactic longitude/latitude: %1/%2"
-msgstr ""
+msgstr "Longitud/latitud galaksi: %1/%2"
 
 #: src/core/StelObject.cpp:121 src/core/StelObject.cpp:124
 #: src/core/StelObject.cpp:127
@@ -765,7 +783,7 @@ msgstr ""
 #. TRANSLATORS: Full phrase is "Algorithm of DeltaT"
 #: src/gui/ConfigurationDialog.cpp:1120
 msgid "Algorithm of"
-msgstr ""
+msgstr "Algoritma"
 
 #: src/gui/ConfigurationDialog.cpp:1131
 msgid "Without correction"
@@ -841,7 +859,7 @@ msgstr "Stephenson (1997)"
 
 #: src/gui/ConfigurationDialog.cpp:1150
 msgid "Meeus (1998) (with Chapront, Chapront-Touze & Francou (1997))"
-msgstr ""
+msgstr "Meeus (1998) (bersama Chapront, Chapront-Touze & Francou (1997))"
 
 #: src/gui/ConfigurationDialog.cpp:1151
 msgid "JPL Horizons"
@@ -857,7 +875,7 @@ msgstr "Montenbruck & Pfleger (2000)"
 
 #: src/gui/ConfigurationDialog.cpp:1154
 msgid "Reingold & Dershowitz (2002, 2007)"
-msgstr ""
+msgstr "Reingold & Dershowitz (2002, 2007)"
 
 #: src/gui/ConfigurationDialog.cpp:1155
 msgid "Morrison & Stephenson (2004, 2005)"
@@ -3766,27 +3784,27 @@ msgstr "Tahi Bintang"
 
 #: src/ui_viewDialog.h:1224
 msgid "Hourly zenith rate"
-msgstr ""
+msgstr "Kadar zenit sejam"
 
 #: src/ui_viewDialog.h:1226
 msgid "ZHR:"
-msgstr ""
+msgstr "ZHR:"
 
 #: src/ui_viewDialog.h:1229
 msgid "Limit Magnitudes (for unaided/binocular observers)"
-msgstr ""
+msgstr "Had Magnitud (untuk pemerhati tanpa alat/binokular)"
 
 #: src/ui_viewDialog.h:1231
 msgid "Limit Magnitudes"
-msgstr ""
+msgstr "Had Magnitud"
 
 #: src/ui_viewDialog.h:1233
 msgid "Stars to magnitude"
-msgstr ""
+msgstr "Bintang ke magnitud"
 
 #: src/ui_viewDialog.h:1237
 msgid "Nebulas to magitude"
-msgstr ""
+msgstr "Nebula ke magnitud"
 
 #: src/ui_viewDialog.h:1240
 msgid "Constellations"
@@ -4550,17 +4568,17 @@ msgstr "aFOV Ocular: %1"
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:598
 #, qt-format
 msgid "Lens #%1"
-msgstr ""
+msgstr "Kanta #%1"
 
 #: plugins/Oculars/src/Oculars.cpp:1563
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:602
 #, qt-format
 msgid "Lens #%1: %2"
-msgstr ""
+msgstr "Kanta #%1: %2"
 
 #: plugins/Oculars/src/Oculars.cpp:1568
 msgid "Lens: none"
-msgstr ""
+msgstr "Kanta: tiada"
 
 #: plugins/Oculars/src/Oculars.cpp:1578 plugins/Oculars/src/Oculars.cpp:1635
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:753
@@ -4607,15 +4625,15 @@ msgstr "Penderia #%1: %2"
 
 #: plugins/Oculars/src/Oculars.cpp:1840
 msgid "&Lens"
-msgstr ""
+msgstr "K&anta"
 
 #: plugins/Oculars/src/Oculars.cpp:1841
 msgid "&Previous lens"
-msgstr ""
+msgstr "Kanta t&erdahulu"
 
 #: plugins/Oculars/src/Oculars.cpp:1842
 msgid "&Next lens"
-msgstr ""
+msgstr "Kanta &berikutnya"
 
 #: plugins/Oculars/src/Oculars.cpp:1872
 msgid "&Telescope"
@@ -4639,11 +4657,11 @@ msgstr "Okular berikutnya"
 
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:207
 msgid "Previous lens"
-msgstr ""
+msgstr "Kanta terdahulu"
 
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:213
 msgid "Next lens"
-msgstr ""
+msgstr "Kanta berikutnya"
 
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:219
 msgid "Previous CCD frame"
@@ -4704,7 +4722,7 @@ msgstr "Kegandaan: %1"
 
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:609
 msgid "Lens: None"
-msgstr ""
+msgstr "Kanta: Tiada"
 
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:610
 msgid "Multiplicity: N/A"
@@ -4712,7 +4730,7 @@ msgstr "Kegandaan: T/B"
 
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:614
 msgid "Multiplicity of lens"
-msgstr ""
+msgstr "Kepelbagaian kanta"
 
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:706
 #, qt-format
@@ -4729,12 +4747,14 @@ msgstr "Medan sebenar bagi paparan yang disediakan oleh binokular ini"
 
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:825
 msgid "Magnification provided by this ocular/lens/telescope combination"
-msgstr ""
+msgstr "Pembesaran disediakan oleh gabungan okular/kanta/teleskop ini"
 
 #: plugins/Oculars/src/gui/OcularsGuiPanel.cpp:826
 msgid ""
 "Actual field of view provided by this ocular/lens/telescope combination"
 msgstr ""
+"Medan sebenar pandangan yang disediakan oleh gabungan okular/kanta/teleskop "
+"ini"
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:489
 msgid "Oculars Plug-in"
@@ -4911,7 +4931,7 @@ msgstr "Binokular"
 #: plugins/Oculars/src/ui_ocularDialog.h:1040
 #: plugins/Oculars/src/ui_ocularDialog.h:1046
 msgid "Lense"
-msgstr ""
+msgstr "Kanta"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:1044
 msgid "Multiplicity"
@@ -4922,6 +4942,8 @@ msgid ""
 "Values of multiplicity >1 expand the focal length (Barlow lens). Values of "
 "multiplicity <1 reduce the focal length (Shapley lens)."
 msgstr ""
+"Nilai kepelbagaian >1 panjangkan jarak fokus (kanta Barlow). Nilai "
+"kepelbagaian <1 kurangkan jarak fokus (kanta Shapley)."
 
 #: plugins/Oculars/src/ui_ocularDialog.h:1047
 #: plugins/Oculars/src/ui_ocularDialog.h:1057
