--- a/po/stellarium/zh_CN.po
+++ b/po/stellarium/zh_CN.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-03 23:02+0700\n"
-"PO-Revision-Date: 2013-02-11 19:29+0000\n"
+"PO-Revision-Date: 2013-03-05 05:05+0000\n"
 "Last-Translator: 罗佳伟 <luojiaweil@gmail.com>\n"
 "Language-Team: Chinese (Hong Kong) <zh_HK@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-03-04 05:23+0000\n"
+"X-Launchpad-Export-Date: 2013-03-06 05:13+0000\n"
 "X-Generator: Launchpad (build 16514)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1259
@@ -108,7 +108,7 @@ msgstr "行星状星云"
 
 #: src/core/modules/Nebula.cpp:385
 msgid "Dark Nebula"
-msgstr ""
+msgstr "暗星云"
 
 #: src/core/modules/Nebula.cpp:388
 msgid "Cluster associated with nebulosity"
