--- a/po/stellarium/de.po
+++ b/po/stellarium/de.po
@@ -10,13 +10,13 @@ msgstr ""
 "Project-Id-Version: de\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-08 13:39+0200\n"
-"PO-Revision-Date: 2013-03-03 20:55+0000\n"
-"Last-Translator: gzotti <Georg.Zotti@univie.ac.at>\n"
+"PO-Revision-Date: 2013-03-09 12:17+0000\n"
+"Last-Translator: Max Digru <mdigruber19@gmail.com>\n"
 "Language-Team: <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-03-09 04:43+0000\n"
+"X-Launchpad-Export-Date: 2013-03-10 04:43+0000\n"
 "X-Generator: Launchpad (build 16523)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1259
@@ -1783,7 +1783,7 @@ msgstr "Tupi-Guarani"
 
 #: src/translations.h:178
 msgid "Tongan"
-msgstr ""
+msgstr "Tongaische Sprache"
 
 #: src/translations.h:179
 msgid "Western"
@@ -5009,11 +5009,11 @@ msgstr "Fernglas"
 #: plugins/Oculars/src/ui_ocularDialog.h:1039
 #: plugins/Oculars/src/ui_ocularDialog.h:1045
 msgid "Lenses"
-msgstr ""
+msgstr "Objektive"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:1043
 msgid "Multiplicity:"
-msgstr ""
+msgstr "Vielfache"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:1044
 msgid ""
