--- a/po/stellarium/pt.po
+++ b/po/stellarium/pt.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-08 13:39+0200\n"
-"PO-Revision-Date: 2013-03-06 19:16+0000\n"
+"PO-Revision-Date: 2013-03-09 10:14+0000\n"
 "Last-Translator: Tiago S. <Unknown>\n"
 "Language-Team: Portuguese <pt@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-03-09 04:47+0000\n"
+"X-Launchpad-Export-Date: 2013-03-10 04:43+0000\n"
 "X-Generator: Launchpad (build 16523)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1259
@@ -5018,11 +5018,11 @@ msgstr "Binóculo"
 #: plugins/Oculars/src/ui_ocularDialog.h:1039
 #: plugins/Oculars/src/ui_ocularDialog.h:1045
 msgid "Lenses"
-msgstr ""
+msgstr "Lentes"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:1043
 msgid "Multiplicity:"
-msgstr ""
+msgstr "Multiplicidade:"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:1044
 msgid ""
