--- a/po/stellarium/en_GB.po
+++ b/po/stellarium/en_GB.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-08 13:39+0200\n"
-"PO-Revision-Date: 2013-02-18 21:02+0000\n"
-"Last-Translator: Mikael Hiort af Ornäs <lakritslemmel@hotmail.com>\n"
+"PO-Revision-Date: 2013-03-10 23:42+0000\n"
+"Last-Translator: Andi Chandler <Unknown>\n"
 "Language-Team: English (United Kingdom) <en_GB@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-03-09 04:50+0000\n"
+"X-Launchpad-Export-Date: 2013-03-11 04:34+0000\n"
 "X-Generator: Launchpad (build 16523)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1259
@@ -108,7 +108,7 @@ msgstr "Planetary nebula"
 
 #: src/core/modules/Nebula.cpp:385
 msgid "Dark Nebula"
-msgstr ""
+msgstr "Dark Nebula"
 
 #: src/core/modules/Nebula.cpp:388
 msgid "Cluster associated with nebulosity"
