update DSO textures

--- a/README
+++ b/README
@@ -325,8 +325,8 @@ for more details on the location of the user data directory for your OS.
 	4.14 The folder icon derived from the Tango Desktop Project, used under
 		the terms of the Creative Commons Attribution Share-Alike
 		license.
-	4.15 Images of NGC104, NGC281, NGC5139, NGC6543, NGC6960, NGC7023, NGC7317, 
-                NGC7318, NGC7319, NGC7320, NGC7331, IC4592 
+	4.15 Images of NGC281, NGC5139, NGC6543, NGC6960, NGC7023, NGC7317, NGC7318, 
+		NGC7319, NGC7320, NGC7331
 		from Andrey Kuznetsov, Kepler Observatory
 		http://kepler-observatorium.ru
 		License: Creative Commons Attribution 3.0 Unported
@@ -335,8 +335,25 @@ for more details on the location of the user data directory for your OS.
 		from Oleg Bryzgalov 
 		http://olegbr.astroclub.kiev.ua/
 		License: Creative Commons Attribution 3.0 Unported
-	4.17 Image of eta Carinae from Georg Zotti
+	4.17 Image of eta Carinae 
+		from Georg Zotti
+		http://www.waa.at/
 		License: Creative Commons Attribution 3.0 Unported
+	4.18 Images of IC1805, IC1848, NGC6888
+		from Steve Tuttle
+		http://www.stuttle1.com/
+	4.19 Images of IC2944, IC4628, M47, M88
+		from Trevor Gerdes
+		http://sarcasmogerdes.dyndns.org/
+	4.20 Images of IC2118, NGC1532
+		from users of Ice In Space
+		http://www.iceinspace.com.au/
+	4.21 Image of IC5146 from James A Weier
+	4.22 Images of SMC, LMC (Magellanic Clouds) and rho Oph from Albert Van Donkelaar
+	4.23 Images of NGC55, NGC300, NGC1365, NGC3628, NGC4945, NGC5128, NGC6726,
+		NGC6744, NGC6752, NGC6822, NGC7293
+		from Philip Montgomery
+		http://www.kenthurst.bigpondhosting.com/
 
 --------------------------------------------------------------------------------
 9. LICENSE
