update DSO textures

--- a/README
+++ b/README
@@ -304,7 +304,7 @@ for more details on the location of the user data directory for your OS.
 		http://home.att.net/~hermperez/default.htm
 		License: "Feel free to use these images, if you use them in a
 		commercial setting please attribute the source."
-	4.9 Images of M8, M20, M33, NGC253, NGC1499, NGC2244, IC343 from
+	4.9 Images of M8, M33, NGC253, NGC1499, NGC2244, IC343 from
 		Jean-Pierre Bousquet
 	4.10 Images of M1, M15, M16, M27, M42, M57, M97, NGC6946 from Stephane Dumont	
 	4.11 Images of M17, M44, NGC856, NGC884 from Maxime Spano
@@ -342,7 +342,7 @@ for more details on the location of the user data directory for your OS.
 	4.18 Images of IC1805, IC1848, NGC6888
 		from Steve Tuttle
 		http://www.stuttle1.com/
-	4.19 Images of IC2944, IC4628, M47, M88
+	4.19 Images of IC2944, IC4628, M20, M21, M47, M88
 		from Trevor Gerdes
 		http://sarcasmogerdes.dyndns.org/
 	4.20 Images of IC2118, NGC1532
