update description for DSO textures

--- a/README
+++ b/README
@@ -354,6 +354,9 @@ for more details on the location of the user data directory for your OS.
 		NGC6744, NGC6752, NGC6822, NGC7293
 		from Philip Montgomery
 		http://www.kenthurst.bigpondhosting.com/
+	4.24 Images of M39, M40, M77
+		from Barry Gerdes
+		http://barry.sarcasmogerdes.com/
 
 --------------------------------------------------------------------------------
 9. LICENSE
