update IC4592-IC4601 area

--- a/README
+++ b/README
@@ -326,7 +326,7 @@ for more details on the location of the user data directory for your OS.
 		the terms of the Creative Commons Attribution Share-Alike
 		license.
 	4.15 Images of NGC281, NGC5139, NGC6543, NGC6960, NGC7023, NGC7317, NGC7318, 
-		NGC7319, NGC7320, NGC7331
+		NGC7319, NGC7320, NGC7331, IC4601
 		from Andrey Kuznetsov, Kepler Observatory
 		http://kepler-observatorium.ru
 		License: Creative Commons Attribution 3.0 Unported
@@ -354,7 +354,7 @@ for more details on the location of the user data directory for your OS.
 		NGC6744, NGC6752, NGC6822, NGC7293
 		from Philip Montgomery
 		http://www.kenthurst.bigpondhosting.com/
-	4.24 Images of M39, M77
+	4.24 Images of M39, M77, IC4592
 		from Barry Gerdes
 		http://barry.sarcasmogerdes.com/
 
