update DSO textures info

--- a/README
+++ b/README
@@ -342,7 +342,7 @@ for more details on the location of the user data directory for your OS.
 	4.18 Images of IC1805, IC1848, NGC6888
 		from Steve Tuttle
 		http://www.stuttle1.com/
-	4.19 Images of IC2944, IC4628, M20, M21, M47, M88
+	4.19 Images of IC2944, IC4628, M20, M21, M47
 		from Trevor Gerdes
 		http://sarcasmogerdes.dyndns.org/
 	4.20 Images of IC2118, NGC1532
@@ -354,7 +354,7 @@ for more details on the location of the user data directory for your OS.
 		NGC6744, NGC6752, NGC6822, NGC7293
 		from Philip Montgomery
 		http://www.kenthurst.bigpondhosting.com/
-	4.24 Images of M39, M77, IC4592
+	4.24 Image of IC4592
 		from Barry Gerdes
 		http://barry.sarcasmogerdes.com/
 
