--- a/po/stellarium-skycultures/gl.po
+++ b/po/stellarium-skycultures/gl.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-06 21:30+0700\n"
-"PO-Revision-Date: 2012-12-30 18:18+0000\n"
+"PO-Revision-Date: 2013-03-14 20:56+0000\n"
 "Last-Translator: Manuel Rosales Graña <manuel.rosales@mundo-r.com>\n"
 "Language-Team: Galician <gl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-03-07 04:48+0000\n"
-"X-Generator: Launchpad (build 16514)\n"
+"X-Launchpad-Export-Date: 2013-03-15 04:33+0000\n"
+"X-Generator: Launchpad (build 16532)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -3934,55 +3934,55 @@ msgstr "Corredores do ceo"
 
 #: skycultures/tongan/constellation_names.eng.fab:1
 msgid "Toloatonga"
-msgstr ""
+msgstr "Toloatonga"
 
 #: skycultures/tongan/constellation_names.eng.fab:2
 msgid "Lua tangata"
-msgstr ""
+msgstr "Lua tangata"
 
 #: skycultures/tongan/constellation_names.eng.fab:3
 msgid "Toloa"
-msgstr ""
+msgstr "Toloa"
 
 #: skycultures/tongan/constellation_names.eng.fab:4
 msgid "Tu'ulalupe"
-msgstr ""
+msgstr "Tu'ulalupe"
 
 #: skycultures/tongan/constellation_names.eng.fab:5
 msgid "Toloalahi"
-msgstr ""
+msgstr "Toloalahi"
 
 #: skycultures/tongan/constellation_names.eng.fab:6
 msgid "Fungasia"
-msgstr ""
+msgstr "Fungasia"
 
 #: skycultures/tongan/constellation_names.eng.fab:7
 msgid "Tuinga ika"
-msgstr ""
+msgstr "Tuinga ika"
 
 #: skycultures/tongan/constellation_names.eng.fab:8
 msgid "Houmatoloa"
-msgstr ""
+msgstr "Houmatoloa"
 
 #: skycultures/tongan/constellation_names.eng.fab:9
 msgid "Fatanalua"
-msgstr ""
+msgstr "Fatanalua"
 
 #: skycultures/tongan/constellation_names.eng.fab:10
 msgid "Ae e'Uvea"
-msgstr ""
+msgstr "Ae e'Uvea"
 
 #: skycultures/tongan/constellation_names.eng.fab:11
 msgid "Kapakau'o'tafahi"
-msgstr ""
+msgstr "Kapakau'o'tafahi"
 
 #: skycultures/tongan/star_names.fab:1
 msgid "Ma'afutoka"
-msgstr ""
+msgstr "Ma'afutoka"
 
 #: skycultures/tongan/star_names.fab:2
 msgid "Ma'afulele"
-msgstr ""
+msgstr "Ma'afulele"
 
 #: skycultures/tongan/star_names.fab:3
 msgid "Velitoa hififo"
@@ -3990,19 +3990,19 @@ msgstr ""
 
 #: skycultures/tongan/star_names.fab:4
 msgid "Velitoa hahake"
-msgstr ""
+msgstr "Velitoa hahake"
 
 #: skycultures/tongan/star_names.fab:5
 msgid "Hikule'o"
-msgstr ""
+msgstr "Hikule'o"
 
 #: skycultures/tongan/star_names.fab:6
 msgid "Monuafe"
-msgstr ""
+msgstr "Monuafe"
 
 #: skycultures/tongan/star_names.fab:7
 msgid "Motuliki"
-msgstr ""
+msgstr "Motuliki"
 
 #: skycultures/tupi/constellation_names.eng.fab:1
 msgid "White Ostrich"
@@ -4944,7 +4944,7 @@ msgstr "Merga"
 
 #: skycultures/western/star_names.fab:142
 msgid "Kochab"
-msgstr ""
+msgstr "Kochab"
 
 #: skycultures/western/star_names.fab:143
 msgid "Zubenelgenubi"
