fix name for nebulae

--- a/po/stellarium-skycultures/stellarium-skycultures.pot
+++ b/po/stellarium-skycultures/stellarium-skycultures.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-03-17 16:41+0700\n"
+"POT-Creation-Date: 2013-03-17 19:35+0700\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -521,7 +521,7 @@ msgid "Dragonfly cluster"
 msgstr ""
 
 #: nebulae/default/ngc2000names.dat:367
-msgid "Elephant Trunk"
+msgid "Elephant's Trunk nebula"
 msgstr ""
 
 #: nebulae/default/ngc2000names.dat:368 nebulae/default/ngc2000names.dat:369
