Launchpad automatic translations update.

--- a/po/stellarium/bn.po
+++ b/po/stellarium/bn.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-18 19:27+0700\n"
-"PO-Revision-Date: 2013-01-07 10:32+0000\n"
-"Last-Translator: Alexander Wolf <Unknown>\n"
+"PO-Revision-Date: 2013-03-19 07:06+0000\n"
+"Last-Translator: Tanmoy Saha <Unknown>\n"
 "Language-Team: Tanmoy Saha\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-03-19 05:21+0000\n"
+"X-Launchpad-Export-Date: 2013-03-20 04:40+0000\n"
 "X-Generator: Launchpad (build 16532)\n"
 "Language: bn\n"
 
@@ -258,7 +258,7 @@ msgstr "মহাকাশ যান"
 
 #: src/core/StelCore.cpp:1419
 msgid "Correction is disabled. Use only if you know what you are doing!"
-msgstr ""
+msgstr "সংশোধন নিস্ক্রিয় করা আছে । সম্যক ধারণা থাকলে তবেই সক্রিয় করুন ।"
 
 #: src/core/StelCore.cpp:1422
 #, qt-format
