--- a/po/stellarium-skycultures/ms.po
+++ b/po/stellarium-skycultures/ms.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-17 19:35+0700\n"
-"PO-Revision-Date: 2013-03-08 13:46+0000\n"
+"PO-Revision-Date: 2013-03-21 01:35+0000\n"
 "Last-Translator: abuyop <Unknown>\n"
 "Language-Team: Malay <ms@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-03-18 04:40+0000\n"
+"X-Launchpad-Export-Date: 2013-03-21 04:36+0000\n"
 "X-Generator: Launchpad (build 16532)\n"
 
 #: nebulae/default/ngc2000names.dat:218
@@ -522,7 +522,7 @@ msgstr "Gugusan pepatung"
 
 #: nebulae/default/ngc2000names.dat:367
 msgid "Elephant's Trunk nebula"
-msgstr ""
+msgstr "Nebula Belalai Gajah"
 
 #: nebulae/default/ngc2000names.dat:368 nebulae/default/ngc2000names.dat:369
 #: nebulae/default/ngc2000names.dat:370 nebulae/default/ngc2000names.dat:371
@@ -604,35 +604,35 @@ msgstr "Nebula planet kura-kura"
 
 #: nebulae/default/ngc2000names.dat:393
 msgid "Small Magellanic Cloud"
-msgstr ""
+msgstr "Awan Magelan Kecil"
 
 #: nebulae/default/ngc2000names.dat:394
 msgid "Bow-Tie nebula"
-msgstr ""
+msgstr "Nebula Tali leher Kupu-kupu"
 
 #: nebulae/default/ngc2000names.dat:395
 msgid "Iris nebula"
-msgstr ""
+msgstr "Nebula Iris"
 
 #: nebulae/default/ngc2000names.dat:396
 msgid "Fireworks galaxy"
-msgstr ""
+msgstr "Bima sakti bunga api"
 
 #: nebulae/default/ngc2000names.dat:397
 msgid "Whale galaxy"
-msgstr ""
+msgstr "Bima sakti ikan paus"
 
 #: nebulae/default/ngc2000names.dat:398
 msgid "Needle galaxy"
-msgstr ""
+msgstr "Bima sakti jarum"
 
 #: nebulae/default/ngc2000names.dat:399
 msgid "Pearl cluster"
-msgstr ""
+msgstr "Gugusan mutiara"
 
 #: nebulae/default/ngc2000names.dat:400
 msgid "S Normae cluster"
-msgstr ""
+msgstr "Gugusan S Normae"
 
 #: skycultures/arabic/constellation_names.eng.fab:1
 msgid "The Shackled Woman"
@@ -1045,7 +1045,7 @@ msgstr "Anak dara"
 
 #: skycultures/arabic/star_names.fab:55
 msgid "The tow juror"
-msgstr ""
+msgstr "Ahli juri tunda"
 
 #: skycultures/arabic/star_names.fab:56
 msgid "The pulled-in paw"
