--- a/po/stellarium/sk.po
+++ b/po/stellarium/sk.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-18 19:27+0700\n"
-"PO-Revision-Date: 2013-03-14 18:13+0000\n"
+"PO-Revision-Date: 2013-03-20 16:43+0000\n"
 "Last-Translator: Pavol Gajdoš <Unknown>\n"
 "Language-Team: Slovak <sk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-03-19 05:28+0000\n"
+"X-Launchpad-Export-Date: 2013-03-21 04:36+0000\n"
 "X-Generator: Launchpad (build 16532)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1259
@@ -7157,7 +7157,7 @@ msgstr "Jup"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:243
 msgid "Semi-Major Axis"
-msgstr "Hlavná poloosa"
+msgstr "Hlavná poloos"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:243
 msgid "AU"
